[package]
name = "marble_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["wayland", "dynamic", "serialize"] }
bevy-inspector-egui = "0.17.0"
# bevy-trait-query = "0.1.1"
bevy_pancam = {version = "0.7.0", features = ["bevy-inspector-egui", "bevy_egui"] }
bevy_prototype_lyon = "0.7.2"
bevy_egui = "0.19.0"
bevy_rapier2d = { version = "0.20.0", features = [ ] }
bevy_mod_debugdump = "0.6.0"
iyes_loopless = "0.9.1"
bevy_prototype_debug_lines = "0.9"

anyhow = "1.0.66"
# auto_unwrap = "1.1.0"
ctor = "0.1.26"
derive_more = "0.99.17"
dyn-clone = "1.0.10"
# once_cell = "1.16.0"
rand = "0.8.5"
ron = "0.8.0"
strum = "0.24"
strum_macros = "0.24"
# trait_enum = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
typetag = "0.2.5"
# quote = "1.0.23"

[workspace]
resolver = "2"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
